<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Calculator</string>
    <string name="hint">Enter a number</string>
    <string name="result_field">Result</string>
    <string name="button_add">+</string>
    <string name="button_subtract">-</string>
    <string name="button_multiply">*</string>
    <string name="button_divide">/</string>

    <string name="error_zero_division">Cannot divide by zero</string>

    <string name="view_name_1">Calculator</string>
    <string name="view_name_2">Gallery</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
</resources>