<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Calculator">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:theme="?attr/actionBarTheme" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".Calculator">

            <EditText
                android:id="@+id/inputFieldB"
                android:layout_width="338dp"
                android:layout_height="52dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="30dp"
                android:autofillHints="null"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="number|numberDecimal|numberSigned"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.461"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputFieldA" />

            <Button
                android:id="@+id/buttonMul"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="20dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/button_multiply"
                android:textAlignment="center"
                android:textSize="48sp"
                app:layout_constraintEnd_toStartOf="@+id/buttonDiv"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/buttonAdd" />

            <Button
                android:id="@+id/buttonDiv"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="60dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/button_divide"
                android:textAlignment="center"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonMul"
                app:layout_constraintTop_toBottomOf="@+id/buttonSub" />

            <Button
                android:id="@+id/buttonSub"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="60dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/button_subtract"
                android:textAlignment="center"
                android:textSize="48sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/buttonAdd"
                app:layout_constraintTop_toBottomOf="@+id/resultField" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginStart="60dp"
                android:layout_marginTop="72dp"
                android:layout_marginEnd="20dp"
                android:insetLeft="0dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/button_add"
                android:textAlignment="center"
                android:textSize="48sp"
                app:layout_constraintEnd_toStartOf="@+id/buttonSub"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/resultField" />

            <TextView
                android:id="@+id/resultField"
                android:layout_width="337dp"
                android:layout_height="51dp"
                android:layout_marginStart="37dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="37dp"
                android:text="@string/result_field"
                android:textAlignment="textEnd"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputFieldB" />

            <EditText
                android:id="@+id/inputFieldA"
                android:layout_width="338dp"
                android:layout_height="52dp"
                android:layout_marginStart="30dp"
                android:layout_marginTop="148dp"
                android:layout_marginEnd="30dp"
                android:autofillHints="null"
                android:ems="10"
                android:hint="@string/hint"
                android:inputType="number|numberDecimal|numberSigned"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.461"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:menu="@menu/menu_drawer" />

</androidx.drawerlayout.widget.DrawerLayout>